now fixed alignment insta

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -18,7 +18,7 @@ p {
 
 .instagram.icon {
   color: white;
-  vertical-align: bottom;
+  vertical-align: baseline !important;
   font-size: 30px;
 }
 
